--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -3,5 +3,6 @@ add_subdirectory(carla_osi)
 set(CARLA_OSI_LIB_INCLUDES ${CARLA_OSI_LIB_INCLUDES}
 ${CMAKE_CURRENT_LIST_DIR}/CARLA2OSIInterface.h
 ${CMAKE_CURRENT_LIST_DIR}/Utility.h
+${CMAKE_CURRENT_LIST_DIR}/Semaphore.h
 PARENT_SCOPE
 )
