--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,7 +1,7 @@
 #includes
 add_subdirectory(carla_osi)
 set(CARLA_OSI_LIB_INCLUDES ${CARLA_OSI_LIB_INCLUDES}
-${CMAKE_CURRENT_LIST_DIR}/CARLA2OSIInterface.h
+${CMAKE_CURRENT_LIST_DIR}/CARLA_OSI_Interface.h
 ${CMAKE_CURRENT_LIST_DIR}/Utility.h
 ${CMAKE_CURRENT_LIST_DIR}/Semaphore.h
 PARENT_SCOPE
