--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -2,7 +2,10 @@
 add_subdirectory(carla_osi)
 set(CARLA_OSI_LIB_INCLUDES ${CARLA_OSI_LIB_INCLUDES}
 ${CMAKE_CURRENT_LIST_DIR}/CARLA_OSI_Interface.h
+${CMAKE_CURRENT_LIST_DIR}/CARLA_TrafficUpdate.h
 ${CMAKE_CURRENT_LIST_DIR}/Utility.h
+${CMAKE_CURRENT_LIST_DIR}/ParameterDefinitions.h
 ${CMAKE_CURRENT_LIST_DIR}/Semaphore.h
+${CMAKE_CURRENT_LIST_DIR}/CARLA_Interface.h
 PARENT_SCOPE
 )
