--- a/Dockerfile18
+++ b/Dockerfile18
@@ -2,7 +2,7 @@ FROM ubuntu:18.04 as carla_osi_service_builder
 MAINTAINER frank.baumgarten@dlr.de
 
 ENV DEBIAN_FRONTEND=noninteractive MAKEFLAGS="-j$(nproc)"
-RUN apt-get update && apt-get install -y build-essential python3-pip git libtbb2 libboost-filesystem-dev && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y build-essential python3-pip git libtbb2 && rm -rf /var/lib/apt/lists/*
 
 RUN python3 -m pip install --upgrade pip
 RUN pip3 install cmake==3.28.1 conan==1.59.0
@@ -12,8 +12,12 @@ WORKDIR /carlaosiservice/build
 COPY . /carlaosiservice/
 
 RUN cmake .. -DCMAKE_CXX_STANDARD=14 -DCMAKE_BUILD_TYPE=Release
-RUN cmake --build . --target CARLA_OSI_Service
+RUN cmake --build . --target CARLA_OSI_Service -j 8
+
+FROM ubuntu:18.04
+COPY --from=carla_osi_service_builder /carlaosiservice/build/bin/CARLA_OSI_Service .
+COPY --from=carla_osi_service_builder /root/.conan/data/boost/1.80.0/_/_/package/0407d76bcc65afd4235263012ba30451e8277158/lib/libboost_filesystem.so.1.80.0 /usr/lib/x86_64-linux-gnu/
 
 WORKDIR /
 RUN mkdir logs
-CMD /carlaosiservice/build/bin/CARLA_OSI_Service -log /logs/log.csv
+CMD /CARLA_OSI_Service -log /logs/log.csv
