--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -10,6 +10,7 @@ ${CMAKE_CURRENT_LIST_DIR}/Logger.h
 ${CMAKE_CURRENT_LIST_DIR}/Utility.h
 ${CMAKE_CURRENT_LIST_DIR}/ParameterDefinitions.h
 ${CMAKE_CURRENT_LIST_DIR}/Semaphore.h
+${CMAKE_CURRENT_LIST_DIR}/MessageCache.h
 ${CMAKE_CURRENT_LIST_DIR}/CARLA_Interface.h
 ${CMAKE_CURRENT_LIST_DIR}/CARLA_Module.h
 PARENT_SCOPE
